# xnb

./: .CHANGELOG.md.swp  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: python_package.yml  testing_coverage.yml
config/: tox.ini
docs/: benchmark_test.md  build.md
experimental/: independence.py  independence_test.py  kde_plot.ipynb  normality.py  normality_method.py  normalize_method_test.py
kde_classifier/: _bandwidth_functions.py  _kde_object.py  hselect.py  stratified_naive_bayes.py
tests/: bandwidth_functions_test.py  benchmark_NB_test.py  conftest.py  performance_test.py  xnb_test.py
xnb/: __init__.py  _bandwidth_functions.py  _kde_object.py  _progress_bar.py  enum.py  enums.py  explicable_naive_bayes.py
xnb_cayetano/: __init__.py  _bandwidth_functions.py  explicable_naive_bayes.py  stratified_naive_bayes.py
xnb_jesus/: _bandwidth_functions.py  explicable_naive_bayes.py  stratified_naive_bayes.py
