[tool.poetry]
name = "kde_classifier"
version = "0.1.1"
description = "KDE Classifier with feature selection and Naive Bayes"
authors = ["Cayetano Romero", "Jesús Aguilar"]

[tool.poetry.dependencies]
python = "3.9.0"
numpy = "1.21.2"
pandas = "1.3.3"
sklearn = "0.0"
mpmath = "1.2.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-benchmark = "4.0.0"
ipykernel = "6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [

]