[tool.poetry]
name = "xnb"
version = "0.1.3"
description = "KDE Classifier with feature selection and Naive Bayes"
authors = ["Cayetano Romero", "Jesús Aguilar"]

[tool.poetry.dependencies]
python = "3.9.0"
numpy = "1.21.2"
pandas = "2.0.3"
sklearn = "0.0"
mpmath = "1.2.1"
numba = "0.56.4"
alive-progress = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-benchmark = "4.0.0"
ipykernel = "6.9.1"
line-profiler = "4.0.2"
freezegun = "^1.4.0"
flake8-bugbear = "^24.1.17"
flake8-print = "^5.0.0"
flake8-builtins = "^2.2.0"
flake8-eradicate = "^1.5.0"
flake8-pie = "^0.16.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-string-format = "^0.3.0"
flake8-unused-arguments = "^0.0.13"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.14.0"
flake8-literal = "^1.4.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-annotations-complexity = "^0.0.8"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
flake8-annotations = "^3.0.1"
python-dotenv = "^1.0.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [

]