[project]
name = "xnb"
version = "0.4.5"
description = "Explainable Naive Bayes (XNB) classifier. Using KDE for feature selection and Naive Bayes for prediction."
readme = "README.md"
requires-python = ">=3.9.0"
authors = [
  { name = "Cayetano Romero Vargas", email = "cromerovargas2d@gmail.com" },
  { name = "Jesús Aguilar", email = "aguilar@upo.es" }
]
license = "MIT"
keywords = [
  "KDE", "naive bayes", "classification", "feature selection",
  "machine learning", "explicability", "kernel density", "class-specific"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Repository" = "https://github.com/sorul/xnb"
"Changelog" = "https://github.com/sorul/xnb/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9.0, <4.0.0"
numpy = "^2.0.1"
pandas = "^2.2.2"
alive-progress = "^3.1.5"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.4.0"
flake8-bugbear = "^24.1.17"
flake8-print = "^5.0.0"
flake8-builtins = "^2.2.0"
flake8-eradicate = "^1.5.0"
flake8-pie = "^0.16.0"
flake8-secure-coding-standard = "^1.4.1"
flake8-string-format = "^0.3.0"
flake8-unused-arguments = "^0.0.13"
flake8-warnings = "^0.4.1"
flake8-comprehensions = "^3.14.0"
flake8-literal = "^1.4.0"
flake8-multiline-containers = "^0.0.19"
flake8-newspaper-style = "^0.4.3"
flake8-annotations-complexity = "^0.0.8"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^1.7.2"
flake8-pytest = "^1.4"
flake8-annotations = "^3.0.1"
line-profiler = "^4.0.2"
numba = "^0.60.0"
pytest = "^7.2.0"
pytest-benchmark = "^4.0.0"
python-dotenv = "^1.0.1"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
tornado = "^6.5"
fonttools = "4.60.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [

]